--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,25 +1,36 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'org.jetbrains.kotlin.kapt'
 }
 
 android {
-    compileSdk 33
+    compileSdk 32
 
     defaultConfig {
         applicationId "com.sonth.mvvm.sample"
         minSdk 26
-        targetSdk 33
+        targetSdk 32
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true
     }
 
     buildTypes {
-        release {
+        debug {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            buildConfigField "String", "BASE_URL", '"https://abc.com"'
+            buildConfigField "String", "SECRET_KEY", '""'
+        }
+
+        release {
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            buildConfigField "String", "BASE_URL", '"https://abc.com"'
+            buildConfigField "String", "SECRET_KEY", '""'
         }
     }
     compileOptions {
@@ -29,15 +40,226 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    sourceSets{
+        main.java.srcDirs += 'src/main/kotlin/'
+    }
+
+    dataBinding {
+        enabled = true
+    }
 }
 
+def retrofitVersion = '2.9.0'
+def lifecycle_version = "2.5.1"
+def dagger_version = "2.41"
+def dagger_android_version = "2.41"
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    //UI
+    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    //view model
+    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version")
+    // LiveData
+    implementation("androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version")
+    // Saved state module for ViewModel
+    implementation("androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycle_version")
+    // alternately - if using Java8, use the following instead of lifecycle-compiler
+    implementation("androidx.lifecycle:lifecycle-common-java8:$lifecycle_version")
+    //rx
+    implementation "io.reactivex.rxjava2:rxjava:2.2.17"
+    implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
+    // dependency injection
+    implementation "com.google.dagger:dagger:$dagger_version"
+    kapt "com.google.dagger:dagger-compiler:$dagger_version"
+    implementation "com.google.dagger:dagger-android:$dagger_android_version"
+    implementation "com.google.dagger:dagger-android-support:$dagger_android_version"
+    kapt "com.google.dagger:dagger-android-processor:$dagger_android_version"
+    //event bus
+    implementation 'org.greenrobot:eventbus:3.3.1'
+    //gson
+    implementation 'com.google.code.gson:gson:2.8.9'
+    //networking
+    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion"
+    implementation "com.squareup.retrofit2:converter-moshi:$retrofitVersion"
+    implementation "com.squareup.retrofit2:converter-scalars:$retrofitVersion"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.3.1"
+    implementation "com.neovisionaries:nv-websocket-client:2.9"
+    //biometrics
+    implementation 'androidx.biometric:biometric:1.1.0'
+    //view pager
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
+    //event bus
+    implementation "org.greenrobot:eventbus:3.3.1"
+    //ble
+    implementation "com.github.weliem:blessed-android:2.2.0"
+    implementation 'com.google.android.gms:play-services-location:20.0.0'
+    //glide
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    kapt 'com.github.bumptech.glide:compiler:4.11.0'
+    implementation "com.google.guava:guava:31.1-android"
 }
+
+//Auto convert and generate dimens
+task convertDimens() {
+
+    def xmlFile = "${project.rootDir}/app/src/main/res/values/dimens.xml"
+    def xmlFile411 = "${project.rootDir}/app/src/main/res/values-sw411dp/dimens.xml"
+    def xmlFile480 = "${project.rootDir}/app/src/main/res/values-sw480dp/dimens.xml"
+    def xmlFile540 = "${project.rootDir}/app/src/main/res/values-sw540dp/dimens.xml"
+    def xmlFile600 = "${project.rootDir}/app/src/main/res/values-sw600dp/dimens.xml"
+    def xmlFile640 = "${project.rootDir}/app/src/main/res/values-sw640dp/dimens.xml"
+    def xmlFile720 = "${project.rootDir}/app/src/main/res/values-sw720dp/dimens.xml"
+    def xmlFile800 = "${project.rootDir}/app/src/main/res/values-sw800dp/dimens.xml"
+
+    def xmlOriginal = new XmlParser().parse(xmlFile)
+
+    def xml411 = xmlOriginal.clone()
+    def xml480 = xmlOriginal.clone()
+    def xml540 = xmlOriginal.clone()
+    def xml600 = xmlOriginal.clone()
+    def xml640 = xmlOriginal.clone()
+    def xml720 = xmlOriginal.clone()
+    def xml800 = xmlOriginal.clone()
+
+    xml411.dimen.each { dimen ->
+        def value = dimen.text()
+        if (value.contains("sp")) {
+            def newValue = value.replace("sp", "").toFloat()
+            newValue = round((411 / 360 * newValue).toFloat(), 2)
+            dimen.value = newValue + "sp"
+        } else if (value.contains("px")) {
+            def newValue = value.replace("px", "").toFloat()
+            newValue = round((411 / 360 * newValue).toFloat(), 2)
+            dimen.value = newValue + "px"
+        } else {
+            def newValue = value.replace("dp", "").toFloat()
+            newValue = round((411 / 360 * newValue).toFloat(), 2)
+            dimen.value = newValue + "dp"
+        }
+    }
+
+    xml480.dimen.each { dimen ->
+        def value = dimen.text()
+        if (value.contains("sp")) {
+            def newValue = value.replace("sp", "").toFloat()
+            newValue = round((480 / 360 * newValue).toFloat(), 2)
+            dimen.value = newValue + "sp"
+        } else if (value.contains("px")) {
+            def newValue = value.replace("px", "").toFloat()
+            newValue = round((480 / 360 * newValue).toFloat(), 2)
+            dimen.value = newValue + "px"
+        } else {
+            def newValue = value.replace("dp", "").toFloat()
+            newValue = round((480 / 360 * newValue).toFloat(), 2)
+            dimen.value = newValue + "dp"
+        }
+    }
+
+    xml540.dimen.each { dimen ->
+        def value = dimen.text()
+        if (value.contains("sp")) {
+            def newValue = value.replace("sp", "").toFloat()
+            newValue = round((540 / 360 * newValue).toFloat(), 2)
+            dimen.value = newValue + "sp"
+        } else if (value.contains("px")) {
+            def newValue = value.replace("px", "").toFloat()
+            newValue = round((540 / 360 * newValue).toFloat(), 2)
+            dimen.value = newValue + "px"
+        } else {
+            def newValue = value.replace("dp", "").toFloat()
+            newValue = round((540 / 360 * newValue).toFloat(), 2)
+            dimen.value = newValue + "dp"
+        }
+    }
+    xml600.dimen.each { dimen ->
+        def value = dimen.text()
+        if (value.contains("sp")) {
+            def newValue = value.replace("sp", "").toFloat()
+            newValue = round((600 / 360 * newValue).toFloat(), 2)
+            dimen.value = newValue + "sp"
+        } else if (value.contains("px")) {
+            def newValue = value.replace("px", "").toFloat()
+            newValue = round((600 / 360 * newValue).toFloat(), 2)
+            dimen.value = newValue + "px"
+        } else {
+            def newValue = value.replace("dp", "").toFloat()
+            newValue = round((600 / 360 * newValue).toFloat(), 2)
+            dimen.value = newValue + "dp"
+        }
+    }
+    xml640.dimen.each { dimen ->
+        def value = dimen.text()
+        if (value.contains("sp")) {
+            def newValue = value.replace("sp", "").toFloat()
+            newValue = round((640 / 360 * newValue).toFloat(), 2)
+            dimen.value = newValue + "sp"
+        } else if (value.contains("px")) {
+            def newValue = value.replace("px", "").toFloat()
+            newValue = round((640 / 360 * newValue).toFloat(), 2)
+            dimen.value = newValue + "px"
+        } else {
+            def newValue = value.replace("dp", "").toFloat()
+            newValue = round((640 / 360 * newValue).toFloat(), 2)
+            dimen.value = newValue + "dp"
+        }
+    }
+    xml720.dimen.each { dimen ->
+        def value = dimen.text()
+        if (value.contains("sp")) {
+            def newValue = value.replace("sp", "").toFloat()
+            newValue = round((720 / 360 * newValue).toFloat(), 2)
+            dimen.value = newValue + "sp"
+        } else if (value.contains("px")) {
+            def newValue = value.replace("px", "").toFloat()
+            newValue = round((720 / 360 * newValue).toFloat(), 2)
+            dimen.value = newValue + "px"
+        } else {
+            def newValue = value.replace("dp", "").toFloat()
+            newValue = round((720 / 360 * newValue).toFloat(), 2)
+            dimen.value = newValue + "dp"
+        }
+    }
+    xml800.dimen.each { dimen ->
+        def value = dimen.text()
+        if (value.contains("sp")) {
+            def newValue = value.replace("sp", "").toFloat()
+            newValue = round((800 / 360 * newValue).toFloat(), 2)
+            dimen.value = newValue + "sp"
+        } else if (value.contains("px")) {
+            def newValue = value.replace("px", "").toFloat()
+            newValue = round((800 / 360 * newValue).toFloat(), 2)
+            dimen.value = newValue + "px"
+        } else {
+            def newValue = value.replace("dp", "").toFloat()
+            newValue = round((800 / 360 * newValue).toFloat(), 2)
+            dimen.value = newValue + "dp"
+        }
+    }
+
+    new XmlNodePrinter(new PrintWriter(new FileWriter(xmlFile411))).print(xml411)
+    new XmlNodePrinter(new PrintWriter(new FileWriter(xmlFile480))).print(xml480)
+    new XmlNodePrinter(new PrintWriter(new FileWriter(xmlFile540))).print(xml540)
+    new XmlNodePrinter(new PrintWriter(new FileWriter(xmlFile600))).print(xml600)
+    new XmlNodePrinter(new PrintWriter(new FileWriter(xmlFile640))).print(xml640)
+    new XmlNodePrinter(new PrintWriter(new FileWriter(xmlFile720))).print(xml720)
+    new XmlNodePrinter(new PrintWriter(new FileWriter(xmlFile800))).print(xml800)
+}
+
+static float round(float d, int decimalPlace) {
+    BigDecimal bd = new BigDecimal(Float.toString(d))
+    bd = bd.setScale(decimalPlace, BigDecimal.ROUND_HALF_UP)
+    return bd.floatValue()
+}
+
+//run convert dimen
+clean.dependsOn convertDimens
